<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:padding="3dip"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:padding="3dip"
            android:textSize="16sp" />
        
        <TextView 
            android:id="@+id/amount"
	     	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:padding="3dip"
	    	android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:padding="3dip"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/date"
    		android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:padding="3dip"
	    	android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:padding="3dip"
            android:textSize="16sp" />
        
        <TextView
			android:id="@+id/category"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="3dip"
			android:textSize="16sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:padding="3dip"
            android:textSize="16sp" />
        
        <TextView
			android:id="@+id/payment"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="3dip"
			android:textSize="16sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <Button
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_view_image"
			android:text="@string/view_image"
			android:onClick="onViewImageClick" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDeleteClick"
            android:text="@string/delete" />

    </TableRow>
    
</TableLayout>